ArgoCD GitOps/NodeJS Backend 1/deployments/backend-nodejs-backend-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-nodejs-backend-1-ingress
  labels:
    name: backend-nodejs-backend-1-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: nodejs-backend-1.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-backend-1-svc
            port: 
              number: 80
